@@ -1,5 +1,12 @@
 ﻿Pulse Changelog
 
+Pulse-4.12.8
+ - Update PD0 data types to handle any number of beams including 3 beam systems.
+ - In TimeSeries, added SystemSetup Boost Pos and Neg Voltage.
+ - Added Ship Water Track from PD0 data.  
+ - Fix the scale of the water track values in PD0
+ - Automatically play file when file selected.
+
 Pulse-4.12.7
  - In TerminalAdcpViewModel, made the Wait States for Advanced BREAK doubles in SendAdvancedBreak().
  - In MatlabMatrixExporter,  added Range of First Bin and Bin Size to ENS data.
